# draftling

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.h752  sdkconfig.defaults.sunton  sdkconfig.defaults.sunton043  sdkconfig.h752
.github/: copilot-instructions.md
components/battery/: CMakeLists.txt  battery.cpp
components/battery/include/: battery.h
components/ble_keyboard/: CMakeLists.txt  ble_keyboard.cpp
components/ble_keyboard/include/: ble_keyboard.h
components/bt_keyboard/: CMakeLists.txt  bt_keyboard.cpp
components/bt_keyboard/include/: bt_keyboard.h
components/display/: CMakeLists.txt  display.cpp  display_axs15231b.cpp  display_eds3.cpp  display_epaper.cpp  display_epdiy.cpp  display_h752.cpp  display_mipi_dsi.cpp  display_rgb.cpp  display_rlcd.cpp  display_st7789.cpp  display_uc8179.cpp  epd_board_papers3.c  idf_component.yml  lv_mem_psram.c  lvgl_port.cpp
components/display/include/: display.h  lvgl_port.h
components/editor/: CMakeLists.txt  Kconfig.projbuild  draftling_logo.c  editor.cpp  editor_ui.cpp  md_parser.cpp  wifi_icon.c
components/editor/include/: draftling_logo.h  editor.h  editor_ui.h  md_parser.h  wifi_icon.h
components/fastepd/: CMakeLists.txt
components/fastepd/src/: FastEPD.cpp  FastEPD.h  FastEPD.inl  arduino_io.inl  bb_ep_gfx.inl
components/fonts/: CMakeLists.txt  departure_mono_11.c  departure_mono_14.c  departure_mono_16.c  departure_mono_18.c  greybeard.c  greybeard_11.c  greybeard_14.c  greybeard_16.c  greybeard_18.c  greybeard_22.c  greybeard_26.c  greybeard_cyrillic_11.c  greybeard_cyrillic_14.c  greybeard_cyrillic_16.c  greybeard_cyrillic_18.c  greybeard_cyrillic_22.c  greybeard_cyrillic_26.c  greybeard_hebrew_11.c  greybeard_hebrew_14.c  greybeard_hebrew_16.c  greybeard_hebrew_18.c  greybeard_hebrew_22.c  greybeard_hebrew_26.c  idf_component.yml  montserrat_cjk_10.c  montserrat_cjk_12.c  montserrat_cjk_14.c  montserrat_cjk_16.c  montserrat_cjk_18.c  montserrat_cyrillic_10.c  montserrat_cyrillic_12.c  montserrat_cyrillic_14.c  montserrat_cyrillic_16.c  montserrat_cyrillic_18.c
components/fonts/include/: departure_mono.h  greybeard.h  montserrat_cjk.h  montserrat_cyrillic.h
components/git_sync/: CMakeLists.txt  git_sync.cpp  idf_component.yml
components/git_sync/include/: git_sync.h
components/kb_layout/: CMakeLists.txt  Kconfig.projbuild  kb_layout.cpp
components/kb_layout/include/: kb_layout.h
components/power/: CMakeLists.txt  power.cpp
components/power/include/: power.h
components/sd_card/: CMakeLists.txt  sd_card.cpp
components/sd_card/include/: sd_card.h
components/standby/: CMakeLists.txt  standby.cpp
components/standby/include/: standby.h
components/tab5_kbd/: CMakeLists.txt  tab5_kbd.cpp
components/tab5_kbd/include/: tab5_kbd.h
components/touchscreen/: CMakeLists.txt  idf_component.yml  touchscreen.cpp
components/touchscreen/include/: touchscreen.h
components/usb_kbd/: CMakeLists.txt  idf_component.yml  usb_kbd.cpp
components/usb_kbd/include/: usb_kbd.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp
components/wifi_manager/include/: wifi_manager.h
docs/: deep-sleep-black-screen-investigation.md  lilygo-t5-power.md  sunton-esp32-8048S043.md  sunton-esp32-8048S070c.md  tab5-esp-hosted.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  idf_component.yml  main.cpp
